category search and slide window created.

--- a/my_bootcamp/templates/NavBar/NavBar.html
+++ b/my_bootcamp/templates/NavBar/NavBar.html
@@ -16,11 +16,11 @@
     {% endif %}
         <div class='flex text-teal-900 align-middle py-0.5 px-4 '>
         <div  class='mx-2  hidden lg:flex xl:flex 2xl:flex  hover:text-slate-200 items-center justify-center text-2xl bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500' id='nav_category_link'>
-            <a>
+            
             Categories
-            </a>
+            
         </div> 
-        <div  class=' mx-2 hidden xl:flex 2xl:flex items-center justify-center text-2xl bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500'>
+        <div  class=' mx-2 py-3 hidden xl:flex 2xl:flex items-center justify-center text-2xl bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500'>
            <form action="{% url "home-page" %}" method='get' class='flex '>
             <input class='flex-1 rounded-l-lg w-96 text-slate-800' placeholder='Search Here' type='text' name='search'></input>
             <button
@@ -103,15 +103,15 @@
             </a>
         </div>  
         
- 
+
     </div>
     
 </nav>
-<div class='flex' >
-    <ul id='category_div' class='hidden p-4 border-b border-violet-500 rounded-b-xl xs:w-screen xm:w-screen sm:w-screen md:w-screen lg:mx-96'>
+<div class='flex rounded-b-xl  bg-yellow-500 text-blue-500 font-serif font-bold' >
+    <ul id='category_div' class='hidden p-4 w-full'>
         
-        <li class='text-right p-2' id='nav_category_link_hide'><i class="fa-solid fa-xmark w-8 h-8 font-serif 
-            items-center p-2  text-blue-200 hover:text-blue-700"></i></li>
+        <li class='text-right p-2 border-b border-violet-500' id='nav_category_link_hide'><i class="fa-solid fa-xmark w-8 h-8 font-serif 
+            items-center p-2  text-slate-900 hover:text-blue-700"></i></li>
         {% for items in category %}
         <li class='border-b border-violet-500' id='nav_category_item_hide'>
             <form action="{% url "home-page" %}" method='get' class='flex '>
