--- a/my_bootcamp/templates/base.html
+++ b/my_bootcamp/templates/base.html
@@ -27,12 +27,12 @@
 		<script>
 		$(document).ready(function(){
 			$("#nav_category_link").click(function(){
-			  $("#category_div").show();
+			  $("#category_div").slideDown();
 			});
 		  });
 		  $(document).ready(function(){
 			$("#nav_category_link_hide").click(function(){
-			  $("#category_div").hide();
+			  $("#category_div").slideUp();
 			});
 		  });
 		  $(document).ready(function(){
