--- a/my_bootcamp/templates/NavBar/NavBar.html
+++ b/my_bootcamp/templates/NavBar/NavBar.html
@@ -124,12 +124,12 @@
             
     </ul>
 </div>
-<div class='flex rounded-b-xl  bg-green-500 text-slate-800 font-serif font-bold h-full overflow-y-scroll no-scrollbar' >
+<div id='sidebar_div' class='hidden rounded-b-xl  text-slate-800 font-serif font-bold h-full' >
+    <div class='p-4 w-full  overflow-y-scroll rounded-b-xl  bg-green-500'>
     
-    <ul id='sidebar_div' class='hidden p-4 w-full '>
-        <li class='text-right p-2 border-b border-violet-500' id='sidebar_link_hide'><i class="fa-solid fa-xmark w-8 h-8 font-serif 
-            items-center p-2  text-slate-900 hover:text-blue-700"></i></li>
-                   
+        <p class='text-right p-2 border-b border-violet-500' id='sidebar_link_hide'><i class="fa-solid fa-xmark w-8 h-8 font-serif 
+            items-center p-2  text-slate-900 hover:text-blue-700"></i></p>
+
         <div  class=' mx-2  py-3  items-center justify-center text-2xl bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500'>
             <form action="{% url "home-page" %}" method='get' class='flex flex-col'>
                 <input class='flex rounded-lg w-full px-2 text-slate-800' placeholder='Search Here' type='text' name='search1'></input>
@@ -139,16 +139,28 @@
                     >Search</button>
             </form>
         </div> 
-        <li class='text-left  border-b border-orange-500 text-lg'>Category</li>
+        <p  class='text-left  border-b border-orange-500 text-lg'>
+            <span  class='py-1  w-full'>
+            <i  id='sidebar_category_arrow_down' class="fa-solid fa-chevron-down  font-serif 
+            items-center   text-slate-900 hover:text-blue-700 "></i>
+               Category
+            </span>
+        </p>
+        <div id='sidebar_category_list' class='hidden'>
         {% for items in category %}
-        <li class='border-b border-violet-500' id='sidebar_item_hide'>
-            <form action="{% url "home-page" %}" method='get' class='flex '>
-            <button type='submit' name='category' value="{{items.name}}">
-            {{items.name}}
-            <button>
-            </form>
-        </li>
+        <ul  class=''>
+            <li   class=' border-b border-violet-500' >
+                <form action="{% url "home-page" %}" method='get' class=''>
+                <button type='submit' name='category' value="{{items.name}}">
+                {{items.name}}
+                </button>
+                </form>
+            </li>
+        </ul>
         {% endfor %}
+        <p class='text-center border-b-4 border-blue-500'><i id='sidebar_category_arrow_up' class="fa-solid fa-caret-up font-serif 
+            items-center  text-slate-900 hover:text-blue-700"></i></p>
+        </div>
             
-    </ul>
+    </div>
 </div>
