--- a/my_bootcamp/templates/Home/Home.html
+++ b/my_bootcamp/templates/Home/Home.html
@@ -5,14 +5,60 @@
     {% for item in form  %}       
         <ul class='my-2 p-2'>
            
-            <div class='bg-slate-800 rounded-lg grid md:grid-cols-2 gap-2  pb-2 md:py-2'>
-                <div class='py-2 col-span-1 rounded-lg bg-black'>
-                <video controls autoplay-off class='w-full h-full'>
+            <div class='bg-slate-800  grid md:grid-cols-2 gap-2 p-2 h-full'>
+                <div class='p-2 col-span-1 rounded-lg bg-black'>
+                <div>
+                <h3 class='font-bold text-lg text-gray-300 text-ellipsis overflow-x-scroll no-scrollbar'>{{item.title|capfirst}}</h3>
+                </div>
+                <video controls autoplay-off class='w-full'>
                     <source src="/media/{{item.video}}" type='video/mp4'>
                 </video>
+                <div class='grid grid-cols-5 text-right'>
+                    <div class='col-span-1'></div>
+                    <div class='col-span-1'></div>
+                    <div class='col-span-1'></div>
+                    <div class='col-span-1'>
+                        {% if user.is_authenticated %}
+                        {% if user.id in item.liked_users %}
+                            <form action="{% url 'like_video' item.id %}" method="post">
+                                {% csrf_token %}
+                                <button type="submit"><i class="fa-solid fa-heart  text-orange-600 w-8 h-8 "></i> you liked</button>
+                            </form>
+                        {% else %}
+                            <form action="{% url 'like_video' item.id %}" method="post">
+                                {% csrf_token %}
+                                <button type="submit" class=''><i class="fa-regular fa-heart  text-orange-600 w-8 h-8 "></i></i>add like</button>
+                            </form>
+                        {% endif %}
+                        {% else %}
+                        <a href="{% url 'login' %}"><button type="submit" class=''><i class="fa-regular fa-heart  text-orange-600 w-8 h-8 "></i></i>add like</button></a>
+                        {% endif %}
+                    </div>
+                    <div class='col-span-1'>
+                        {% if user.is_authenticated %}
+                        {% if user.id in item.cart_users %}
+                            <form action="{% url 'cart-item' item.id %}" method="post"> 
+                                {% csrf_token %}  
+                            <button type='submit' class=''>Item carted:<i class="fa-solid fa-cart-shopping w-8 h-8 font-serif 
+                                items-center p-2  text-orange-700"></i></button>
+                            <br>
+                            </form>
+                        {% else %}
+                            <form action="{% url 'cart-item' item.id %}" method="post"> 
+                                {% csrf_token %}  
+                            <button type='submit' class=''>Add To Cart:<i class="fa-solid fa-cart-shopping w-8 h-8 font-serif 
+                                items-center p-2  text-slate-200 hover:text-slate-200"></i></button>
+                            <br>
+                            </form>
+                        {% endif %}
+                        {% else %}
+                            <a href="{% url 'login' %}"><button type='submit' class=''><i class="fa-solid fa-cart-shopping w-8 h-8 font-serif 
+                                items-center p-2  text-orange-700"></i></button></a> 
+                        {% endif %}
+                    </div>
+                </div>
                 </div>
                 <div class='p-2 col-span-1 overflow-y-scroll  no-scrollbar py-2'>
-                <h3 class='font-bold text-lg text-gray-300'>{{item.title|capfirst}}</h3>
                 <h3>Posted By : {{item.instructor.username}}</h3>
                 <p>Published On : {{item.created_at}}</p>
                 <p>Price: {{item.price}}</p>
@@ -36,7 +82,8 @@
                     </form>
                 {% endif %}
                 {% else %}
-                    <p>Please <a href="{% url 'login' %}">log in</a> to like this video.</p>
+                    <a href="{% url 'login' %}"><button type='submit' class=''>Item carted:<i class="fa-solid fa-cart-shopping w-8 h-8 font-serif 
+                        items-center p-2  text-orange-700"></i></button></a> 
                 {% endif %}
                     
             
@@ -53,7 +100,7 @@
                     </form>
                 {% endif %}
                 {% else %}
-                    <p>Please <a href="{% url 'login' %}">log in</a> to like this video.</p>
+                   <a href="{% url 'login' %}"><button type="submit" class=''><i class="fa-regular fa-heart  text-orange-600 w-8 h-8 "></i></i>add like</button></a>
                 {% endif %}
                 </div>
 
