--- a/my_bootcamp/templates/NavBar/NavBar.html
+++ b/my_bootcamp/templates/NavBar/NavBar.html
@@ -12,7 +12,12 @@
             <button class=' text-ellipsis text text-lg  overflow-x-hidden'><span class='bg-clip-text text-transparent bg-gradient-to-r  from-blue-700 via-indigo-500 to-orange-500'>Hello {{user}}!</span></button>
             </a>
         </div>  
-            
+    {% else %}
+    <div  class=' mx-2 flex  py-3 xs:hidden xm:hidden sm:hidden  md:flex lg:flex xl:flex 2xl:flex'>
+        <a>
+        <button class=' text-ellipsis text text-lg  overflow-x-hidden'><span class='bg-clip-text text-transparent bg-gradient-to-r  from-blue-700 via-indigo-500 to-orange-500'>Menu</span></button>
+        </a>
+    </div> 
     {% endif %}
         <div class='flex text-teal-900 align-middle py-0.5 px-4 '>
         <div  class='mx-2  hidden lg:flex xl:flex 2xl:flex  hover:text-slate-200 items-center justify-center text-2xl bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500' id='nav_category_link'>
@@ -71,7 +76,7 @@
          
         {% if user.is_authenticated %}
             
-            <div  class='mx-2 hidden lg:flex xl:flex 2xl:flex py-3'>
+            <div  class='mx-2 hidden lg:flex xl:flex 2xl:flex py-4'>
                 <a href="{% url "logout-page" %}">
                 <button class=' font-serif rounded-md 
                 items-center   h-12 px-8
@@ -81,7 +86,7 @@
                 </a>
             </div>  
          {% else %} 
-            <div  class='mx-2 hidden lg:flex xl:flex 2xl:flex py-3'>
+            <div  class='mx-2 hidden lg:flex xl:flex 2xl:flex py-4'>
                 <a href="{% url "login-page" %}">
                 <button class=' font-serif rounded-md 
                 items-center   h-12 px-8
@@ -93,7 +98,7 @@
         {% endif %}
       
             
-        <div  class='mx-2 hidden  lg:flex xl:flex 2xl:flex py-3'>
+        <div  class='mx-2 hidden  lg:flex xl:flex 2xl:flex py-4'>
             <a href="{% url "signup-page" %}">
             <button class=' font-serif rounded-md
             items-center h-12  px-8 
@@ -125,9 +130,9 @@
     </ul>
 </div>
 <div id='sidebar_div' class='hidden rounded-b-xl  text-slate-800 font-serif font-bold h-full' >
-    <div class='p-4 w-full  overflow-y-scroll rounded-b-xl  bg-green-500'>
+    <div class='p-4 w-full  overflow-y-scroll rounded-b-xl  bg-yellow-500'>
     
-        <p class='text-right p-2 border-b border-violet-500' id='sidebar_link_hide'><i class="fa-solid fa-xmark w-8 h-8 font-serif 
+        <p class='text-right p-2 ' id='sidebar_link_hide'><i class="fa-solid fa-xmark w-8 h-8 font-serif 
             items-center p-2  text-slate-900 hover:text-blue-700"></i></p>
 
         <div  class=' mx-2  py-3  items-center justify-center text-2xl bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500'>
@@ -158,8 +163,17 @@
             </li>
         </ul>
         {% endfor %}
-        <p class='text-center border-b-4 border-blue-500'><i id='sidebar_category_arrow_up' class="fa-solid fa-caret-up font-serif 
+        <p class='text-center '><i id='sidebar_category_arrow_up' class="fa-solid fa-caret-up font-serif 
             items-center  text-slate-900 hover:text-blue-700"></i></p>
+        <p class='text-center text-xs border-b-4 border-blue-500'>hide</p>
+        </div>
+        <div class='grid grid-cols-2 gap-4 py-2 mt-4'>
+            <div>
+                <a href="{% url "login-page" %}" class='p-2 border border-blue-200 bg-blue-700 rounded-md text-center'>Sign In</a>
+            </div>
+            <div>
+                <a href="{% url "signup-page" %}" class='p-2 border border-orange-200 bg-green-700 rounded-md text-center'>Sign Up</a>
+            </div>
         </div>
             
     </div>
