--- a/my_bootcamp/templates/base.html
+++ b/my_bootcamp/templates/base.html
@@ -67,6 +67,11 @@
 			  $("#sidebar_category_list").hide();
 			});
 		  });
+		  $(document).ready(function(){
+			$("#rate_video").click(function(){
+			  $("#rating_form").show();
+			});
+		  });
 		</script>
 		{% tailwind_css %}
 	</head>
