--- a/my_bootcamp/templates/base.html
+++ b/my_bootcamp/templates/base.html
@@ -69,7 +69,7 @@
 		  });
 		  $(document).ready(function(){
 			$("#rate_video").click(function(){
-			  $("#rating_form").show();
+			  $("#rating_form").hide();
 			});
 		  });
 		</script>
